Document PPDG/src/objects/Vendor_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Email_address__c</fullName>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_number__c</fullName>
        <label>Mobile number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Business_Contacts__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Business_Contacts__c</referenceTo>
        <relationshipLabel>Vendor Contacts</relationshipLabel>
        <relationshipName>Vendor_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Work_number__c</fullName>
        <label>Work number</label>
        <type>Phone</type>
    </fields>
    <label>Vendor Contact</label>
    <nameField>
        <label>Vendor Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>